MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/SPAReminders__c.object-meta.xml
<CustomObject>
    <label>SPAReminders</label>
    <nameField>
        <displayFormat>SPAR-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPAReminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>