MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>