MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/fields/DocuSignURL__c.field-meta.xml
<CustomField>
    <fullName>DocuSignURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocuSignURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>