MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/fields/isCaseCreated__c.field-meta.xml
<CustomField>
    <fullName>isCaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCaseCreated</label>
    <type>Checkbox</type>
</CustomField>