MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/fields/NoOfReminders__c.field-meta.xml
<CustomField>
    <fullName>NoOfReminders__c</fullName>
    <label>NoOfReminders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>