MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/fields/WhatsappURL__c.field-meta.xml
<CustomField>
    <fullName>WhatsappURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>WhatsappURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>