MODON MRE BPDEV/force-app/main/default/objects/SPAReminders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomerName__c</columns>
    <columns>Email__c</columns>
    <columns>PhoneNumber__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>NoOfReminders__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WhatsappURL__c</columns>
    <columns>DocuSignURL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Order__c</field>
        <operation>equals</operation>
        <value>SO-12766</value>
    </filters>
    <label>All</label>
</ListView>